# DDOS-Visualization-Cpp

./: README.md  run.sh  run.sh.save
backend/: CMakeLists.txt  api_routes.hpp  attack_generator.hpp  main.cpp  stats_tracker.hpp  websocket_server.hpp
data/: country_coordinates.json
docs/: setup.md
frontend/: globe.js  index.html  main.js  styles.css  websocket-client.js
